# ruleta_api

./: README.md  hello.py  pyproject.toml
app/: main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: apuesta.py  juego.py  root.py  ruleta.py  usuario.py
app/db/: ruleta_api.db
app/test/: test_main.py
