[project]
name = "ruleta-api"
version = "0.1.0"
description = "proyecto de prueba para HeyGia"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
